# execore

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
scripts/: execore-record.py  execore-replay
src/: execore.c  execore.h  execore.lds  execore.lds.S  execore_elf.c  execore_elf.h  execore_maps.c  execore_maps.h  execore_mman.h  execore_page.h  execore_procfs.h  execore_ptrace.h  execore_stdlib.c  execore_stdlib.h  execore_string.h  execore_unistd.c  execore_unistd.h  execore_user.h
src/fakelibc/: stdint.h
src/nolibc/: arch-powerpc.h  arch-s390.h  crt.h  sys.h
test/: execore_maps.c  execore_stdlib.c  execore_unistd.c  maps.txt  phoenix-common.sh  phoenix.c  phoenix.test  record+replay-crash.test  record+replay.test  record-replay-crash.test  record-replay-fgmemory.test  record-replay-memory.test  record-replay-remote-chroot.test  record-replay-remote-fgmemory.test  record-replay-remote-memory.test  record-replay-remote.test  record-replay.test  test.c  test.h  test_execvpe.c  test_execvpe.sh  test_maps.c
